--- a/.gitea/workflows/export.yml
+++ b/.gitea/workflows/export.yml
@@ -3,9 +3,8 @@ name: Export Game
 on:
   workflow_dispatch:
   push:
-    branches:
-      - main
-      - feature/export
+    tags:
+      - 'v*'
 
 permissions:
   contents: write
