--- a/.github/workflows/export.yml
+++ b/.github/workflows/export.yml
@@ -1,12 +1,15 @@
-
 name: Export Game
 
 on:
   workflow_dispatch:
   push:
-    branches:
-      - main
-      - feature/export
+    tags:
+      - 'v*'
+
+permissions:
+  contents: write
+  pages: write
+  id-token: write
 
 jobs:
   export_game:
@@ -15,6 +18,13 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v1
+        with:
+          bun-version: latest
 
       - name: export game
         id: export
@@ -23,11 +33,23 @@ jobs:
           godot_executable_download_url: https://github.com/godotengine/godot-builds/releases/download/4.5-stable/Godot_v4.5-stable_linux.x86_64.zip
           godot_export_templates_download_url: https://github.com/godotengine/godot-builds/releases/download/4.5-stable/Godot_v4.5-stable_export_templates.tpz
           relative_project_path: ./
-          presets_to_export: "Windows Desktop,Linux,macOS"
+          presets_to_export: "Windows Desktop,Linux,macOS,Web"
           archive_output: true
 
-      - name: upload artifacts
-        uses: actions/upload-artifact@v4
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          name: builds
-          path: ${{ steps.export.outputs.archive_directory }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ${{ steps.export.outputs.build_directory }}/Web
+          publish_branch: gh-pages
+
+      - name: Generate changelog and create release
+        run: bun x changelogithub
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Upload release artifacts
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: ${{ steps.export.outputs.archive_directory }}/*.zip
