--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -375,7 +375,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="exports/GWJ86.html"
+export_path="../../Downloads/exports/index.html"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
