--- a/.github/workflows/export.yml
+++ b/.github/workflows/export.yml
@@ -54,6 +54,24 @@ jobs:
         with:
           files: ${{ steps.export.outputs.archive_directory }}/*.zip
 
+      - name: Get release changelog
+        if: startsWith(github.ref, 'refs/tags/')
+        id: release_info
+        run: |
+          sleep 2  # Give GitHub API a moment to update
+          RELEASE_DATA=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+            "https://api.github.com/repos/${{ github.repository }}/releases/tags/${GITHUB_REF#refs/tags/}")
+          BODY=$(echo "$RELEASE_DATA" | jq -r '.body // empty')
+          URL=$(echo "$RELEASE_DATA" | jq -r '.html_url // empty')
+          
+          # Write to output using multiline format
+          {
+            echo 'body<<EOF'
+            echo "$BODY"
+            echo 'EOF'
+            echo "url=$URL"
+          } >> $GITHUB_OUTPUT
+
       - name: Send changelog to Discord
         if: startsWith(github.ref, 'refs/tags/')
         uses: tsickert/discord-webhook@v5.3.0
